created HTML file for application

--- a/index.html
+++ b/index.html
@@ -33,35 +33,35 @@
       <div class="my-work">
         <section class="examples" id="main-example">
           <header>Project One</header>
-          <img src="./assets/images/camera.jpg" alt="black camera" />
+          <img src="./assets/kelly-sikkema-YXWoEn5uOvg-unsplash.jpg" alt="sunflower on black and white background" />
           <p>Lorem ipsum</p>
         </section>
         <section class="examples">
           <header>Project Two</header>
-          <img src="./assets/images/tablet.jpg" alt="tablet held in hands" />
+          <img src="./assets/kelly-sikkema-sK0dKnDOcEM-unsplash.jpg" alt="woman at table with coffee" />
           <p>Lorem ipsum</p>
         </section>
         <section class="examples">
           <header>Project Three</header>
           <img
-            src="./assets/images/toilet-paper.jpg"
-            alt="rolls of toilet paper in a basket"
+            src="./assets/kelly-sikkema-Oz_J_FXKvIs-unsplash.jpg"
+            alt="blank paper and quills on table with eucalyptus leaves"
           />
           <p>Lorem ipsum</p>
         </section>
         <section class="examples">
           <header>Project Four</header>
           <img
-            src="./assets/images/wooden-spoons.jpg"
-            alt="4 wooden spoons with different seasonings"
+            src="./assets/kelly-sikkema-oYlvf3pdBw0-unsplash.jpg"
+            alt="blank card in wood stand with plant behind"
           />
           <p>Lorem ipsum</p>
         </section>
          <section class="examples">
           <header>Project Five</header>
           <img
-            src="./assets/images/wooden-spoons.jpg"
-            alt="4 wooden spoons with different seasonings"
+            src="./assets/ben-kolde-bs2Ba7t69mM-unsplash.jpg"
+            alt="laptop on outdoor table with phrase 'I design and develop experiences that make people's lives simple.'"
           />
           <p>Lorem ipsum</p>
         </section>
@@ -69,9 +69,12 @@
     </main>
     <!-- Footer -->
     <footer>
-      <h3>
-       
-    </h3>
+      <h3>Contact Me</h3>
+     <ul>
+        <li>317.403.4592</li>
+        <li><a href="mailto: jamieholpuch@gmail.com">Email</a></li>
+        <li><a href="https://github.com/jamieholpuch">GitHub</a></li>
+     </ul> 
     </footer>
   </body>
 </html>
