created and added to CSS file for application

--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <title>Jamie's Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="" />
+    <link rel="stylesheet" type="text/css" href="./assets/style.css">
   </head>
   <body>
     <!-- Header -->
     <header>
       <h1>Jamie Holpuch</h1>
+    </header>
     <!-- Navbar -->
     <nav>
-      <a href="#">About Me</a>
-      <a href="#">My Work</a>
-      <a href="#">Contact Me</a>
-      <a href="#">Resume</a>
+      <ul>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">My Work</a></li>
+        <li> <a href="#">Contact Me</a></li>
+        <li><a href="#">Resume</a></li>
+      </ul>
     </nav>
- </header>
     <!-- Body -->
     <main>
       <!-- Sidebar -->
@@ -30,7 +32,7 @@
       <div class="about-me">
         <p>Insert text about myself</p>
       </div>  
-      <div class="my-work">
+      <div class="portfolio">
         <section class="examples" id="main-example">
           <header>Project One</header>
           <img src="./assets/kelly-sikkema-YXWoEn5uOvg-unsplash.jpg" alt="sunflower on black and white background" />
