--- a/index.html
+++ b/index.html
@@ -13,35 +13,29 @@
     </header>
     <!-- Navbar -->
     <nav>
-      <ul>
-        <li><a href="#">About Me</a></li>
-        <li><a href="#">My Work</a></li>
-        <li> <a href="#">Contact Me</a></li>
-        <li><a href="#">Resume</a></li>
-      </ul>
+        <a href="#">About Me</a>
+        <a href="#">My Work</a>
+        <a href="#">Contact Me</a>
+        <a href="#">Resume</a>
     </nav>
     <!-- Body -->
     <main>
       <!-- Sidebar -->
-      <aside>
-        <h2>About Me</h2>
-        <h2>My Work</h2>
-        <h2>Contact Me</h2>
-      </aside>
-      <!-- Sample Work -->
-      <div class="about-me">
-        <p>Insert text about myself</p>
-      </div>  
-      <div class="portfolio">
+    <aside>
+      <h2>About Me</h2>
+      <h2>My Work</h2>
+    </aside>
+    <section class="about-me">
+      <p>Hello, my name is Jamie Holpuch and I'm a student in the Butler WebEx Coding Bootcamp. I have 10 years of experience in Marketing and Communications, and have decided to expand my skillset and learn how to develop websites and applications. I can work well both independently and in a collaborative environment, and am excited to show you what I've learned so far. Check out my work below!</p>
+    </section> 
+    <section class="my-work">
         <section class="examples" id="main-example">
           <header>Project One</header>
-          <img src="./assets/kelly-sikkema-YXWoEn5uOvg-unsplash.jpg" alt="sunflower on black and white background" />
-          <p>Lorem ipsum</p>
+          <img src="./assets/emre-CBh4D3l0EwM-unsplash.jpg" alt="eucalyptus leaves on dark background">
         </section>
         <section class="examples">
           <header>Project Two</header>
           <img src="./assets/kelly-sikkema-sK0dKnDOcEM-unsplash.jpg" alt="woman at table with coffee" />
-          <p>Lorem ipsum</p>
         </section>
         <section class="examples">
           <header>Project Three</header>
@@ -49,7 +43,6 @@
             src="./assets/kelly-sikkema-Oz_J_FXKvIs-unsplash.jpg"
             alt="blank paper and quills on table with eucalyptus leaves"
           />
-          <p>Lorem ipsum</p>
         </section>
         <section class="examples">
           <header>Project Four</header>
@@ -57,17 +50,13 @@
             src="./assets/kelly-sikkema-oYlvf3pdBw0-unsplash.jpg"
             alt="blank card in wood stand with plant behind"
           />
-          <p>Lorem ipsum</p>
         </section>
          <section class="examples">
           <header>Project Five</header>
-          <img
-            src="./assets/ben-kolde-bs2Ba7t69mM-unsplash.jpg"
-            alt="laptop on outdoor table with phrase 'I design and develop experiences that make people's lives simple.'"
+          <img src="./assets/kelly-sikkema-YXWoEn5uOvg-unsplash.jpg" alt="sunflower on black and white background"
           />
-          <p>Lorem ipsum</p>
         </section>
-      </div>
+      </section>
     </main>
     <!-- Footer -->
     <footer>
