completed CSS and HTML updates

--- a/index.html
+++ b/index.html
@@ -7,65 +7,56 @@
     <link rel="stylesheet" type="text/css" href="./assets/style.css">
   </head>
   <body>
-    <!-- Header -->
     <header>
       <h1>Jamie Holpuch</h1>
     </header>
-    <!-- Navbar -->
     <nav>
-        <a href="#">About Me</a>
-        <a href="#">My Work</a>
-        <a href="#">Contact Me</a>
-        <a href="#">Resume</a>
+        <a href="#about-me">About Me</a>
+        <a href="#my-work">My Work</a>
+        <a href="#contact-me">Contact Me</a>
+        <a href="https://www.google.com/">Resume</a>
     </nav>
-    <!-- Body -->
-    <main>
-      <!-- Sidebar -->
-    <aside>
-      <h2>About Me</h2>
-      <h2>My Work</h2>
-    </aside>
-    <section class="about-me">
-      <p>Hello, my name is Jamie Holpuch and I'm a student in the Butler WebEx Coding Bootcamp. I have 10 years of experience in Marketing and Communications, and have decided to expand my skillset and learn how to develop websites and applications. I can work well both independently and in a collaborative environment, and am excited to show you what I've learned so far. Check out my work below!</p>
-    </section> 
-    <section class="my-work">
-        <section class="examples" id="main-example">
+      <div class="about-me" id="about-me">
+        <div class="item content-header">About Me</div>
+        <div class="item paragraph">Hello, my name is Jamie Holpuch and I'm a student in the Butler WebEx Coding Bootcamp. I have 10 years of experience in Marketing and Communications, and have decided to expand my skillset and learn how to develop websites and applications. I can work well both independently and in a collaborative environment, and am excited to show you what I've learned so far. Check out my work below!</div>
+      </div>
+
+      <div class="my-work" id="my-work">
+        <div class="item content-header">My Work</div>
+        <div class="item projects" id="main-example">
           <header>Project One</header>
-          <img src="./assets/emre-CBh4D3l0EwM-unsplash.jpg" alt="eucalyptus leaves on dark background">
-        </section>
-        <section class="examples">
+          <a href="https://www.google.com/"><img src="./assets/emre-CBh4D3l0EwM-unsplash.jpg" alt="eucalyptus leaves on dark background" class="image" /></a>
+        </div>
+        <div class="placeholder"></div>
+        <div class="item projects">
           <header>Project Two</header>
-          <img src="./assets/kelly-sikkema-sK0dKnDOcEM-unsplash.jpg" alt="woman at table with coffee" />
-        </section>
-        <section class="examples">
+          <a href="https://www.google.com/"><img src="./assets/kelly-sikkema-YXWoEn5uOvg-unsplash.jpg" alt="sunflower on white and black background" class="image" /></a>
+        </div>
+        <div class="item projects">
           <header>Project Three</header>
-          <img
-            src="./assets/kelly-sikkema-Oz_J_FXKvIs-unsplash.jpg"
-            alt="blank paper and quills on table with eucalyptus leaves"
-          />
-        </section>
-        <section class="examples">
+          <a href="https://www.google.com/"><img src="./assets/kelly-sikkema-Oz_J_FXKvIs-unsplash.jpg" alt="blank paper, quill and eucalyptus flat lay" class="image" /></a>
+        </div>
+        <div class="placeholder"></div>
+        <div class="item projects">
           <header>Project Four</header>
-          <img
-            src="./assets/kelly-sikkema-oYlvf3pdBw0-unsplash.jpg"
-            alt="blank card in wood stand with plant behind"
-          />
-        </section>
-         <section class="examples">
+          <a href="https://www.google.com/"><img src="./assets/kelly-sikkema-oYlvf3pdBw0-unsplash.jpg" alt="blank card on stand in front of plant" class="image" /></a>
+        </div>
+        <div class="item projects">
           <header>Project Five</header>
-          <img src="./assets/kelly-sikkema-YXWoEn5uOvg-unsplash.jpg" alt="sunflower on black and white background"
-          />
-        </section>
-      </section>
-    </main>
-    <!-- Footer -->
-    <footer>
-      <h3>Contact Me</h3>
-     <ul>
-        <li>317.403.4592</li>
-        <li><a href="mailto: jamieholpuch@gmail.com">Email</a></li>
-        <li><a href="https://github.com/jamieholpuch">GitHub</a></li>
-     </ul> 
-    </footer>
+          <a href="https://www.google.com/"><img src="./assets/kelly-sikkema-sK0dKnDOcEM-unsplash.jpg" alt="woman leaning on counter with coffee cup" class="image" /></a>
+        </div>
+      </div>  
+
+      <div class="contact-me" id="contact-me">
+        <div class="item content-header">Contact Me</div>
+        <div class="item contact-info">
+          <ul>
+            <li>317.403.4592</li>
+            <li><a href="mailto: jamieholpuch@gmail.com">Email</a></li>
+            <li><a href="https://github.com/jamieholpuch">GitHub</a></li>
+          </ul>
+        </div>
+      </div>
+
   </body>
 </html>
